phone number are modified

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,6 @@
     "noPropertyAccessFromIndexSignature": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "lib": [
-      "ES2021.String"
-    ]
+    "skipLibCheck": true
   }
 }
